[fix] title alignment and panel text alignment

--- a/src/scss/layout/_faq.scss
+++ b/src/scss/layout/_faq.scss
@@ -2,7 +2,7 @@
     display: none;
 }
 
-.faq__col {
+.faq__title {
     text-align: center;
 }
 
@@ -19,8 +19,10 @@
             width: 100%;
         }
         &__col {
-            text-align: unset;
             padding-right: 20px;
+        }
+        &__title {
+            text-align: unset;
         }
     }
 }
